# pyspdlog

./: .travis.yml  CMakeLists.txt  README.rst
cmake/: PyspdlogConfig.cmake
cmake/external_projects/: spdlog.cmake
python/: CMakeLists.txt  __init__.py
src/: CMakeLists.txt  pyspdlog.hpp  python_spdlog.cpp
tests/: test_logger.py
